--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,6 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_outline">OutlineActivity</string>
+    <string name="title_activity_chapters">ChaptersActivity</string>
+    <string name="title_activity_welcome">WelcomeActivity</string>
 </resources>
