--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
+    <string name="url"><u>yuzhyun.me</u></string>
     <string name="app_name">chemistry</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_exam">ExamActivity</string>
