--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="title_activity_test">TestActivity</string>
     <string name="title_activity_data">DataActivity</string>
     <string name="title_activity_user_list">UserListActivity</string>
+    <string name="title_activity_main2">Main2Activity</string>
 </resources>
