--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,5 @@
     <string name="title_activity_user_list">UserListActivity</string>
     <string name="title_activity_main2">Main2Activity</string>
     <string name="title_activity_test_send">TestSendActivity</string>
+    <string name="title_activity_ctivitytest">ctivitytest</string>
 </resources>
