--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,21 +1,19 @@
 <resources>
     <string name="url"><u>yuzhyun.me</u></string>
-    <string name="app_name">chemistry</string>
+    <string name="app_name">基础化学（中南·湘雅）</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_exam">ExamActivity</string>
     <string name="outline">\n一、前言:\n\n
-\t\t\t\t教学大纲是编写教材及进行教学活动的依据，它规定着本科的教学目的和要求，课堂讲授和实验教学内容、学时分配等。
-基础化学是高等医学院校的教学计划中的一门基础课。\n\t\t\t\t在教学过程中，应注意基础理论，基本知识的讲授，并加强基本技能的训练，为以后的医学专业课奠定基础。
-在教学方式上基本分为理论讲授和实验教学两大部分。\n\t\t\t\t通过理论课的讲授，应使学生系统地掌握基础化学科的基本理论和基础知识，通过实验教学使学生掌握有关的化学基本操作机能，培养学生正确观察反应现象，记录和处理实验结果的能力，在整个教学过程中要积极地开发学生的智能，培养学生的自学能力和独立思考、分析和解决问题的能力。
-基础化学课程总学时数为64学时，其中课堂授课学时数为52学时，实验学时数为12学时。\n\t\t\t\t
-大纲中划线部分是要求学生掌握的内容，其余部分是属于了解或自学的内容，这部分可由授课教师根据具体情况向学生说明。
-实验在教学中占有重要地位，应努力创造条件达到······(略)</string>
+\t\t\t\t尊敬的参与者，您好。我是来自湘雅公共卫生学院·预防医学1201班的王少正，是这项测试的策划者与主持者。这是一项探索性的试验，它的目的在于：探索在智能手机环境下，开展基础化学学习的可能性。
+    \n\t\t\t\t在试验目的的指导下，基于教材中第一章和第二章的内容，我安排了一些选择题和判断题。在题目的设计过程中，一方面，我借鉴了人民卫生出版社的《基础化学学习指导与习题集》，另一方面，我又对重要的知识点进行了补充。所以我相信这款APP可以引发大家的思考。
+\n\t\t\t\t这项试验来源于我所主持的一项国家级创新训练项目，鉴于我和项目组成员有限的时间、精力和财力，这款APP必定存在不足之处。但我同时相信，它必定能让您有所收获。如果您对这项试验有意见（或建议），请联系我：QQ：2495917485；邮箱：zhengge917@163.com。您宝贵的意见是我们课题组的财富。
+\n\t\t\t\t最后，祝愿您能有一个愉快的使用体验。</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_outline">OutlineActivity</string>
     <string name="title_activity_chapters">ChaptersActivity</string>
-    <string name="title_activity_welcome">WelcomeActivity</string>
+    <string name="title_activity_welcome">基础化学（中南·湘雅）</string>
     <string name="title_activity_register">RegisterActivity</string>
     <string name="title_activity_login_register">LoginRegisterActivity</string>
     <string name="title_activity_test">TestActivity</string>
